--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,3 +12,15 @@ body {
   height: 100vh;
   width: 100wh;
 }
+
+.trash-icon {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: all 0.3 ease-in-out;
+}
+.trash-icon:hover {
+  color: rgb(173, 6, 6);
+}
